PdQ test aggiornati

--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -1402,9 +1402,10 @@ All'utente è richiesto di:
 	\item cliccare sul pulsante genera codice;
 	\item attendere lo scaricamento della cartella.
 \end{itemize} & \textit{Non Implementato}\\ \hline
-\caption[Test di Validazione]{Test di Validazione}
-\label{tabella:test0}
+\caption[Test di validazione]{Test di validazione}
+\label{tab:valid}
 \end{longtable}
+\clearpage
 
 \subsubsection{Tracciamento test di validazione-requisiti}
 \normalsize
@@ -1551,7 +1552,7 @@ All'utente è richiesto di:
 \hyperlink{TVFO5}{TVFO5} & RFO5\\ \hline
 \hyperlink{TVFO6}{TVFO6} & RFO6\\ \hline
 \caption[Tracciamento test di validazione-requisiti]{Tracciamento test di validazione-requisiti}
-\label{tabella:tv-requi}
+\label{tab:tv-requi}
 \end{longtable}
 \clearpage
 
@@ -1733,9 +1734,10 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hypertarget{TSVO1.6}{TSVO1.6} & Verificare che l’applicativo funzioni su Safari versione 9 o superiore & \textit{Non Implementato}\\ \hline
 \hypertarget{TSVO1.7}{TSVO1.7} & Verificare che l’applicativo funzioni su Microsoft Edge versione 25 o superiore & \textit{Non Implementato}\\ \hline
 \hypertarget{TSVO2}{TSVO2} & Verificare che il progetto sia sviluppato sulla piattaforma \gloss{GitHub} in modalità pubblica & \textit{Non Implementato}\\ \hline
-\caption[Test di Sistema]{Test di Sistema}
-\label{tabella:test1}
+\caption[Test di sistema]{Test di sistema}
+\label{tab:sys}
 \end{longtable}
+\clearpage
 
 \subsubsection{Tracciamento test di sistema-requisiti}
 \normalsize
@@ -1911,7 +1913,7 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hyperlink{TSVO1.7}{TSVO1.7} & RVO1.7\\ \hline
 \hyperlink{TSVO2}{TSVO2} & RVO2\\ \hline
 \caption[Tracciamento test di sistema-requisiti]{Tracciamento test di sistema-requisiti}
-\label{tabella:ts-requi}
+\label{tab:ts-requi}
 \end{longtable}
 \clearpage
 
@@ -1927,28 +1929,29 @@ I test di integrazione consentono di controllare che più moduli funzionino assi
 \textbf{Id Test} & \textbf{Descrizione} & \textbf{Stato}\\
 \hline
 \endhead
-\hypertarget{TI1}{TI1} & Test di integrazione finale per le componenti client e server & \textit{Non Implementato}\\ \hline
-\hypertarget{TI2}{TI2} & Test di integrazione fra le componenti compiler, controller, generator, parser, project, template e utility. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI3}{TI3} & Verificare che il sistema gestisca correttamente le componenti relative al package compiler. In particolare che gestisca correttamente l'interazione con il controller di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI4}{TI4} & Verificare che il sistema gestisca correttamente le componenti relative al package controller. In particolare che gestisca correttamente l'interazione con i package compiler, utility, parser e generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI5}{TI5} & Verificare che il sistema gestisca correttamente le componenti relative al package generator. In particolare che gestisca correttamente l'interazione con i package controller, project e template di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI6}{TI6} & Verificare che il sistema gestisca correttamente le componenti relative al package parser. In particolare che gestisca correttamente l'interazione con i package controller e project di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI7}{TI7} & Verificare che il sistema gestisca correttamente le componenti relative al package project. In particolare che gestisca correttamente l'interazione con i package generator, parser e stereotype di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI8}{TI8} & Verificare che il sistema gestisca correttamente le componenti relative al package stereotype. In particolare che gestisca correttamente l'interazione con il package project di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI9}{TI9} & Verificare che il sistema gestisca correttamente le componenti relative al package template. In particolare che gestisca correttamente l'interazione con il package generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI10}{TI10} & Verificare che il sistema gestisca correttamente le componenti relative al package utility. In particolare che gestisca correttamente l'interazione con il package controller di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI11}{TI11} & Verificare che il sistema gestisca correttamente le componenti relative al package compiler::java. In particolare che gestisca correttamente l'interazione con gli elementi del package compiler di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI12}{TI12} & Verificare che il sistema gestisca correttamente le componenti relative al package generator::java. In particolare che gestisca correttamente l'interazione con gli elementi del package generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI13}{TI13} & Verificare che il sistema gestisca correttamente le componenti relative al package template::java. In particolare che gestisca correttamente l'interazione con gli elementi del package template di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti celltypes, collection, model, utility e view e la libreria esterna \gloss{JointJS}. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI15}{TI15} & Verificare che il sistema gestisca correttamente le componenti relative al package celltypes. In particolare che gestisca correttamente l'interazione con il package view di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package collection. In particolare che gestisca correttamente l'interazione con il package model di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package model. In particolare che gestisca correttamente l'interazione con i package collection e view di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI18}{TI18} & Verificare che il sistema gestisca correttamente le componenti relative al package model::utility. In particolare che gestisca correttamente l'interazione con i package model::celltypes, model e view di SWEDesigner::client. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package view. In particolare che gestisca correttamente l'interazione con i package model, model::celltypes e model::utility di SWEDesigner::client. & \textit{Non Implementato}\\ \hline
-\caption[Test di Integrazione]{Test di Integrazione}
-\label{tabella:test2}
+\hypertarget{TI1}{TI1} & La richiesta di un client alla risorsa "/" oppure "/index.html" provoca una risposta del server con stato HTTP "200 OK" recante la pagina \emph{index.html}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI2}{TI2} & La richiesta di un client alla risorsa "/generate" (che alleghi un file JSON valido) provoca una risposta del server con stato HTTP "200 OK" recante un archivio ZIP. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI3}{TI3} & Il sistema gestisce correttamente le componenti relative al package \texttt{compiler}; in particolare, gestisce correttamente l'interazione con il Controller di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI4}{TI4} & Il sistema gestisce correttamente le componenti relative al package \texttt{controller}; in particolare, gestisce correttamente l'interazione con i package \texttt{compiler}, \texttt{utility}, \texttt{parser} e \texttt{generator} di \texttt{swedesigner::server}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TI5}{TI5} & Il sistema gestisce correttamente le componenti relative al package \texttt{generator}; in particolare, gestisce correttamente l'interazione con i package \texttt{controller}, \texttt{project} e \texttt{template} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI6}{TI6} & Il sistema gestisce correttamente le componenti relative al package \texttt{parser}; in particolare, gestisce correttamente l'interazione con i package \texttt{controller} e \texttt{project} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI7}{TI7} & Il sistema gestisce correttamente le componenti relative al package \texttt{project}; in particolare, gestisce correttamente l'interazione con i package \texttt{generator}, \texttt{parser} e \texttt{stereotype} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI8}{TI8} & Il sistema gestisce correttamente le componenti relative al package \texttt{stereotype}; in particolare, gestisce correttamente l'interazione con il package \texttt{project} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI9}{TI9} & Il sistema gestisce correttamente le componenti relative al package \texttt{template}; in particolare, gestisce correttamente l'interazione con il package \texttt{generator} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI10}{TI10} & Il sistema gestisce correttamente le componenti relative al package \texttt{utility}; in particolare, gestisce correttamente l'interazione con il package \texttt{controller} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI11}{TI11} & Il sistema gestisce correttamente le componenti relative al package \texttt{compiler::java}; in particolare, gestisce correttamente l'interazione con gli elementi del package \texttt{compiler} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI12}{TI12} & Il sistema gestisce correttamente le componenti relative al package \texttt{generator::java}; in particolare, gestisce correttamente l'interazione con gli elementi del package \texttt{generator} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI13}{TI13} & Il sistema gestisce correttamente le componenti relative al package \texttt{semplate::java}; in particolare, gestisce correttamente l'interazione con gli elementi del package \texttt{template} di \texttt{swedesigner::server}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI14}{TI14} & Le componenti dei package \texttt{models}, \texttt{views}, \texttt{collection} di \texttt{swedesigner::client} interagiscono correttamente tra loro e con la libreria esterna \emph{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI15}{TI15} & Il sistema gestisce correttamente le componenti relative al package \texttt{models::celltypes}; in particolare, gestisce correttamente l'interazione con il package \texttt{views} di \texttt{swedesigner::client} e la libreria esterna \emph{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI16}{TI16} & Il sistema gestisce correttamente le componenti relative al package \texttt{collection}; in particolare, gestisce correttamente l'interazione con il package \texttt{model} di \texttt{swedesigner::client} e la libreria esterna \emph{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI17}{TI17} & Il sistema gestisce correttamente le componenti relative al package \texttt{models}; in particolare, gestisce correttamente l'interazione con i package \texttt{collection} e \texttt{views} di \texttt{swedesigner::client} e la libreria esterna \emph{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI18}{TI18} & Il sistema gestisce correttamente le componenti relative al package \texttt{models::utility}; in particolare, gestisce correttamente l'interazione con i package \texttt{modela::celltypes}, \texttt{models} e \texttt{views} di \texttt{swedesigner::client}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI19}{TI19} & Il sistema gestisce correttamente le componenti relative al package \texttt{views}; in particolare, gestisce correttamente l'interazione con i package \texttt{models}, \texttt{modela::celltypes} e \texttt{models::utility} di \texttt{swedesigner::client} e la libreria esterna \emph{JointJS}. & \textit{Non Implementato}\\ \hline
+\caption[Test di integrazione]{Test di integrazione}
+\label{tab:integr}
 \end{longtable}
+\clearpage
 
 \subsubsection{Tracciamento test di integrazione-componenti}
 \normalsize
@@ -1957,28 +1960,60 @@ I test di integrazione consentono di controllare che più moduli funzionino assi
 \textbf{Test} & \textbf{Componente}\\
 \hline
 \endhead
-\hyperlink{TI1}{TI1} & \texttt{SWEDesigner}\\ \hline
-\hyperlink{TI2}{TI2} & \texttt{SWEDesigner::server}\\ \hline
-\hyperlink{TI3}{TI3} & \texttt{SWEDesigner::server::compiler}\\ \hline
-\hyperlink{TI4}{TI4} & \texttt{SWEDesigner::server::controller}\\ \hline
-\hyperlink{TI5}{TI5} & \texttt{SWEDesigner::server::generator}\\ \hline
-\hyperlink{TI6}{TI6} & \texttt{SWEDesigner::server::parser}\\ \hline
-\hyperlink{TI7}{TI7} & \texttt{SWEDesigner::server::project}\\ \hline
-\hyperlink{TI8}{TI8} & \texttt{SWEDesigner::server::stereotype}\\ \hline
-\hyperlink{TI9}{TI9} & \texttt{SWEDesigner::server::template}\\ \hline
-\hyperlink{TI10}{TI10} & \texttt{SWEDesigner::server::utility}\\ \hline
-\hyperlink{TI11}{TI11} & \texttt{SWEDesigner::server::compiler::java}\\ \hline
-\hyperlink{TI12}{TI12} & \texttt{SWEDesigner::server::generator::java}\\ \hline
-\hyperlink{TI13}{TI13} & \texttt{SWEDesigner::server::template::java}\\ \hline
-\hyperlink{TI14}{TI14} & \texttt{SWEDesigner::client}\\ \hline
-\hyperlink{TI15}{TI15} & \texttt{SWEDesigner::client::model::celltypes}\\ \hline
-\hyperlink{TI16}{TI16} & \texttt{SWEDesigner::client::collection}\\ \hline
-\hyperlink{TI17}{TI17} & \texttt{SWEDesigner::client::model}\\ \hline
-\hyperlink{TI18}{TI18} & \texttt{SWEDesigner::client::model::utility}\\ \hline
-\hyperlink{TI19}{TI19} & \texttt{SWEDesigner::client::view}\\ \hline
+\hyperlink{TI1}{TI1} & \nogloxy{\texttt{swedesigner}}\\ \hline
+\hyperlink{TI2}{TI2} & \nogloxy{\texttt{swedesigner::server}}\\ \hline
+\hyperlink{TI3}{TI3} & \nogloxy{\texttt{swedesigner::server::compiler}}\\ \hline
+\hyperlink{TI4}{TI4} & \nogloxy{\texttt{swedesigner::server::controller}}\\ \hline
+\hyperlink{TI5}{TI5} & \nogloxy{\texttt{swedesigner::server::generator}}\\ \hline
+\hyperlink{TI6}{TI6} & \nogloxy{\texttt{swedesigner::server::parser}}\\ \hline
+\hyperlink{TI7}{TI7} & \nogloxy{\texttt{swedesigner::server::project}}\\ \hline
+\hyperlink{TI8}{TI8} & \nogloxy{\texttt{swedesigner::server::stereotype}}\\ \hline
+\hyperlink{TI9}{TI9} & \nogloxy{\texttt{swedesigner::server::template}}\\ \hline
+\hyperlink{TI10}{TI10} & \nogloxy{\texttt{swedesigner::server::utility}}\\ \hline
+\hyperlink{TI11}{TI11} & \nogloxy{\texttt{swedesigner::server::compiler::java}}\\ \hline
+\hyperlink{TI12}{TI12} & \nogloxy{\texttt{swedesigner::server::generator::java}}\\ \hline
+\hyperlink{TI13}{TI13} & \nogloxy{\texttt{swedesigner::server::template::java}}\\ \hline
+\hyperlink{TI14}{TI14} & \nogloxy{\texttt{swedesigner::client}}\\ \hline
+\hyperlink{TI15}{TI15} & \nogloxy{\texttt{swedesigner::client::model::celltypes}}\\ \hline
+\hyperlink{TI16}{TI16} & \nogloxy{\texttt{swedesigner::client::collection}}\\ \hline
+\hyperlink{TI17}{TI17} & \nogloxy{\texttt{swedesigner::client::model}}\\ \hline
+\hyperlink{TI18}{TI18} & \nogloxy{\texttt{swedesigner::client::model::utility}}\\ \hline
+\hyperlink{TI19}{TI19} & \nogloxy{\texttt{swedesigner::client::view}}\\ \hline
 \caption[Tracciamento test di integrazione-componenti]{Tracciamento test di integrazione-componenti}
-\label{tabella:ts-requi}
+\label{tab:ti-pkg}
 \end{longtable}
+\clearpage
+
+\subsubsection{Tracciamento componenti-test di integrazione}
+\normalsize
+\begin{longtable}{|>{\centering}m{9cm}|m{3cm}<{\centering}|}
+\hline 
+\textbf{Componente} & \textbf{Test}\\
+\hline
+\endhead
+\nogloxy{\texttt{swedesigner}} & \hyperlink{TI1}{TI1}\\ \hline
+\nogloxy{\texttt{swedesigner::client}} & \hyperlink{TI14}{TI14}\\ \hline
+\nogloxy{\texttt{swedesigner::client::collection}} & \hyperlink{TI16}{TI16}\\ \hline
+\nogloxy{\texttt{swedesigner::client::model}} & \hyperlink{TI17}{TI17}\\ \hline
+\nogloxy{\texttt{swedesigner::client::model::celltypes}} & \hyperlink{TI15}{TI15}\\ \hline
+\nogloxy{\texttt{swedesigner::client::model::utility}} & \hyperlink{TI18}{TI18}\\ \hline
+\nogloxy{\texttt{swedesigner::client::view}} & \hyperlink{TI19}{TI19}\\ \hline
+\nogloxy{\texttt{swedesigner::server}} & \hyperlink{TI2}{TI2}\\ \hline
+\nogloxy{\texttt{swedesigner::server::compiler}} & \hyperlink{TI3}{TI3}\\ \hline
+\nogloxy{\texttt{swedesigner::server::compiler::java}} & \hyperlink{TI11}{TI11}\\ \hline
+\nogloxy{\texttt{swedesigner::server::controller}} & \hyperlink{TI4}{TI4}\\ \hline
+\nogloxy{\texttt{swedesigner::server::generator}} & \hyperlink{TI5}{TI5}\\ \hline
+\nogloxy{\texttt{swedesigner::server::generator::java}} & \hyperlink{TI12}{TI12}\\ \hline
+\nogloxy{\texttt{swedesigner::server::parser}} & \hyperlink{TI6}{TI6}\\ \hline
+\nogloxy{\texttt{swedesigner::server::project}} & \hyperlink{TI7}{TI7}\\ \hline
+\nogloxy{\texttt{swedesigner::server::stereotype}} & \hyperlink{TI8}{TI8}\\ \hline
+\nogloxy{\texttt{swedesigner::server::template}} & \hyperlink{TI9}{TI9}\\ \hline
+\nogloxy{\texttt{swedesigner::server::template::java}} & \hyperlink{TI13}{TI13}\\ \hline
+\nogloxy{\texttt{swedesigner::server::utility}} & \hyperlink{TI10}{TI10}\\ \hline
+\caption[Tracciamento componenti-test di integrazione]{Tracciamento componenti-test di integrazione}
+\label{tab:pkg-ti}
+\end{longtable}
+\clearpage
 
 
 
@@ -1992,51 +2027,51 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 \textbf{Id Test} & \textbf{Descrizione} & \textbf{Stato}\\
 \hline
 \endhead
-\hypertarget{TU1}{TU1} & JavaCompiler è in grado di compilare un file sorgente Java in un file eseguibile, senza generare errori di compilazione. & \textit{Non Implementato}\\ \hline
-\hypertarget{TU2}{TU2} & Dato un ParsedProgram valido, JavaGenerator esegue senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU3}{TU3} & Dato un ParsedProgram vuoto, JavaGenerator esegue senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU4}{TU4} & Dato un file JSON contenente informazioni per generare un programma (quindi un array di tipi), Parser è in grado di ricavare un ParsedProgram con tanti tipi quanti dichiarati nel file JSON. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU5}{TU5} & Costruito un ParsedAttribute, questo è in grado di generare una stringa Java contenente tipo e nome passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU6}{TU6} & Costruito un ParsedAttribute statico, questo è in grado di generare una stringa Java contenente la keyword ``static'' seguita dalla dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU7}{TU7} & Costruito un ParsedAttribute con nome composto da sole maiuscole, questo è in grado di generare una stringa Java contenente la keyword ``final'' seguita dalla dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU8}{TU8} & Costruito un ParsedAttribute, questo è in grado di generare una stringa Java contenente visibilità, tipo, nome e valore iniziale passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU9}{TU9} & Costruita una ParsedClass, questa è in grado di generare una stringa Java contenente contenente la keyword ``class'' seguita dal nome della ParsedClass. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU10}{TU10} & Costruita una ParsedClass astratta, questa è in grado di generare una stringa Java contenente contenente le keyword ``abstract class'' seguite dal nome della ParsedClass. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU11}{TU11} & Costruita una ParsedClass e aggiuntole un attributo, questa è in grado di generare una stringa Java contenente la dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU12}{TU12} & Costruita una ParsedClass, è possibile aggiungerle delle interfacce come supertipi. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU13}{TU13} & Costruita una ParsedClass, è possibile aggiungerle una classe come supertipo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU14}{TU14} & Costruita una ParsedClass, l'aggiunta di un supertipo che non sia né classe né interfaccia lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU15}{TU15} & Costruito un ParsedCustom, questo è in grado di generare una stringa contenente la stringa passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU16}{TU16} & Costruito un ParsedElse, questo è in grado di generare una stringa Java contenente la keyword ``else'' e l'insieme di istruzioni passatogli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU17}{TU17} & Costruito un ParsedFor, questo è in grado di generare una stringa Java contenente ``for(A; B; C)'', dove A, B e C sono risp. l'inizializzazione, la condizione e l'aggiornamento passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU18}{TU18} & Costruito un ParsedFor, questo è in grado di generare una stringa Java contenente l'insieme di istruzioni passatogli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU19}{TU19} & Costruito un ParsedIf, questo è in grado di generare una stringa Java contenente la keyword ``if'' con la condizione e l'insieme di istruzioni passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU20}{TU20} & Costruita una ParsedInterface, questa è in grado di generare una stringa Java contenente la keyword ``interface'' seguita dal nome della ParsedInterface. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU21}{TU21} & Costruita una ParsedInterface e aggiuntole un attributo finale, statico e pubblico, questa è in grado di generare una stringa Java contenente la dichiarazione dell'attributo aggiunto. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU22}{TU22} & Costruita una ParsedInterface e aggiuntole un metodo non implementato, questa è in grado di generare una stringa Java contenente la dichiarazione del metodo aggiunto. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU23}{TU23} & Costruita una ParsedInterface e aggiuntole un supertipo, questa è in grado di generare una stringa Java contenente la keyword ``interface'' seguita dal nome della ParsedInterface, poi dalla keyword ``extends'' e infine dal nome del supertipo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU24}{TU24} & Costruita una ParsedInterface, l'aggiunta di un attributo privato lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU25}{TU25} & Costruita una ParsedInterface, l'aggiunta di un attributo non statico lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU26}{TU26} & Costruita una ParsedInterface, l'aggiunta di un attributo non finale lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU27}{TU27} & Costruita una ParsedInterface, l'aggiunta di un metodo privato lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU28}{TU28} & Costruita una ParsedInterface, l'aggiunta di un metodo implementato lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU29}{TU29} & Costruita una ParsedInterface, l'aggiunta di una classe come supertipo lancia una ParsedException. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU30}{TU30} & Costruito un ParsedMethod, questo è in grado di generare una stringa Java contenente la segnatura passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU31}{TU31} & Costruito un ParsedMethod, questo è in grado di generare una stringa Java contenente la sequenza di istruzioni passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU32}{TU32} & Costruito un ParsedProgram e aggiuntigli dei ParsedType, un JavaGenerator è in grado di generare una stringa Java contenente i tipi aggiunti al ParsedProgram. & \textit{Non Eseguito}\\ \hline
-\hypertarget{TU33}{TU33} & Costruito un ParsedReturn, questo è in grado di generare una stringa Java contenente la keyword ``return'' seguita dal valore passatogli nel costruttore e da un punto e virgola. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU34}{TU34} & Costruito un ParsedWhile, questo è in grado di generare una stringa Java contenente la keyword ``while'' seguita dalla condizione e dalla sequenza di istruzioni passategli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU35}{TU35} & Costruito un JavaTemplate per attributi, questo è in grado di generare una stringa Java contenente la dichiarazione di un attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU36}{TU36} & Costruito un JavaTemplate per classi, questo è in grado di generare una stringa Java contenente la dichiarazione di una classe. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU37}{TU37} & Costruito un JavaTemplate per rami else, questo è in grado di generare una stringa Java contenente la keyword ``else'' e il corpo del ramo else. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU38}{TU38} & Costruito un JavaTemplate per cicli for, questo è in grado di generare una stringa Java contenente la dichiarazione di un ciclo for e il corpo del ciclo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU39}{TU39} & Costruito un JavaTemplate per blocchi if, questo è in grado di generare una stringa Java contenente la dichiarazione di un blocco if e il corpo del blocco. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU40}{TU40} & Costruito un JavaTemplate per istruzioni, questo è in grado di generare una stringa Java corrispondente a un'istruzione. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU41}{TU41} & Costruito un JavaTemplate per interfacce, questo è in grado di generare una stringa Java contenente la dichiarazione di un'interfaccia. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU42}{TU42} & Costruito un JavaTemplate per metodi, questo è in grado di generare una stringa Java contenente la dichiarazione di un metodo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU43}{TU43} & Costruito un JavaTemplate per istruzioni return, questo è in grado di generare una stringa Java contenente la keyword ``return'' seguita dal valore da ritornare e da un punto e virgola. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU44}{TU44} & Costruito un JavaTemplate per cicli while, questo è in grado di generare una stringa Java contenente la dichiarazione di un ciclo while e il corpo del ciclo. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\hypertarget{TU45}{TU45} & Un Compressor è in grado di eseguire ZIP su un file nel filesystem & \textcolor{Red}{\textit{Non Superato}}\\ \hline
+\hypertarget{TU1}{TU1} & Un \texttt{JavaCompiler} è in grado di compilare dei file sorgente Java (validi per la compilazione e posti in una stessa directory), senza generare errori di compilazione. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU2}{TU2} & Dato il nome di una directory esistente e un \texttt{ParsedProgram} valido, un \texttt{JavaGenerator} crea nella directory un file sorgente per ogni tipo appartenente al programma. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU3}{TU3} & Dato un \texttt{ParsedProgram} vuoto, un \texttt{JavaGenerator} risponde a una richiesta \texttt{generate} senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU4}{TU4} & Dato un file JSON contenente informazioni per generare un programma (quindi un array di tipi), un \texttt{Parser} è in grado di ricavare un \texttt{ParsedProgram} con tanti tipi quanti dichiarati nel file JSON. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU5}{TU5} & Costruito un \texttt{ParsedAttribute}, questo è in grado di generare una stringa Java contenente tipo e nome passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU6}{TU6} & Costruito un \texttt{ParsedAttribute} statico, questo è in grado di generare una stringa Java contenente la keyword ``static'' seguita dalla dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU7}{TU7} & Costruito un \texttt{ParsedAttribute} con nome composto di sole maiuscole, questo è in grado di generare una stringa Java contenente la keyword ``final'' seguita dalla dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU8}{TU8} & Costruito un \texttt{ParsedAttribute}, questo è in grado di generare una stringa Java contenente visibilità, tipo, nome e valore iniziale passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU9}{TU9} & Costruita una \texttt{ParsedClass}, questa è in grado di generare una stringa Java contenente contenente la keyword ``class'' seguita dal nome della \texttt{ParsedClass}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU10}{TU10} & Costruita una \texttt{ParsedClass} astratta, questa è in grado di generare una stringa Java contenente contenente le keyword ``abstract class'' seguite dal nome della \texttt{ParsedClass}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU11}{TU11} & Costruita una \texttt{ParsedClass} e aggiuntole un attributo, questa è in grado di generare una stringa Java contenente la dichiarazione dell'attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU12}{TU12} & Costruita una \texttt{ParsedClass}, è possibile aggiungerle delle interfacce come supertipi. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU13}{TU13} & Costruita una \texttt{ParsedClass}, è possibile aggiungerle una classe come supertipo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU14}{TU14} & Costruita una \texttt{ParsedClass}, l'aggiunta di un supertipo che non sia né classe né interfaccia lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU15}{TU15} & Costruito un \texttt{ParsedCustom}, questo è in grado di generare la stringa passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU16}{TU16} & Costruito un \texttt{ParsedElse}, questo è in grado di generare una stringa Java contenente la keyword ``else'' e l'insieme di istruzioni passatogli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU17}{TU17} & Costruito un \texttt{ParsedFor}, questo è in grado di generare una stringa Java contenente ``for(A; B; C)'', dove A, B e C sono rispettivamente l'inizializzazione, la condizione e l'aggiornamento passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU18}{TU18} & Costruito un \texttt{ParsedFor}, questo è in grado di generare una stringa Java contenente l'insieme di istruzioni passatogli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU19}{TU19} & Costruito un \texttt{ParsedIf}, questo è in grado di generare una stringa Java contenente la keyword ``if'' con la condizione e l'insieme di istruzioni passatigli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU20}{TU20} & Costruita una \texttt{ParsedInterface}, questa è in grado di generare una stringa Java contenente la keyword ``interface'' seguita dal nome della \texttt{ParsedInterface}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU21}{TU21} & Costruita una \texttt{ParsedInterface} e aggiuntole un attributo finale, statico e pubblico, questa è in grado di generare una stringa Java contenente la dichiarazione dell'attributo aggiunto. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU22}{TU22} & Costruita una \texttt{ParsedInterface} e aggiuntole un metodo non implementato, questa è in grado di generare una stringa Java contenente la dichiarazione del metodo aggiunto. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU23}{TU23} & Costruita una \texttt{ParsedInterface} e aggiuntole un supertipo, questa è in grado di generare una stringa Java contenente la keyword ``interface'' seguita dal nome della \texttt{ParsedInterface}, poi dalla keyword ``extends'' e infine dal nome del supertipo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU24}{TU24} & Costruita una \texttt{ParsedInterface}, l'aggiunta di un attributo privato lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU25}{TU25} & Costruita una \texttt{ParsedInterface}, l'aggiunta di un attributo non statico lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU26}{TU26} & Costruita una \texttt{ParsedInterface}, l'aggiunta di un attributo non finale lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU27}{TU27} & Costruita una \texttt{ParsedInterface}, l'aggiunta di un metodo privato lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU28}{TU28} & Costruita una \texttt{ParsedInterface}, l'aggiunta di un metodo implementato lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU29}{TU29} & Costruita una \texttt{ParsedInterface}, l'aggiunta di una classe come suo supertipo lancia una \texttt{ParsedException}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU30}{TU30} & Costruito un \texttt{ParsedMethod}, questo è in grado di generare una stringa Java contenente la segnatura passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU31}{TU31} & Costruito un \texttt{ParsedMethod}, questo è in grado di generare una stringa Java contenente la sequenza di istruzioni passatagli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU32}{TU32} & Costruito un \texttt{ParsedProgram} e aggiuntigli dei \texttt{ParsedType}, un \texttt{JavaGenerator} è in grado di generare una stringa Java contenente i tipi aggiunti al \texttt{ParsedProgram}. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU33}{TU33} & Costruito un \texttt{ParsedReturn}, questo è in grado di generare una stringa Java contenente la keyword ``return'' seguita dal valore passatogli nel costruttore e da un punto e virgola. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU34}{TU34} & Costruito un \texttt{ParsedWhile}, questo è in grado di generare una stringa Java contenente la keyword ``while'' seguita dalla condizione e dalla sequenza di istruzioni passategli nel costruttore. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU35}{TU35} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un attributo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU36}{TU36} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di una classe. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU37}{TU37} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la keyword ``else'' e il corpo del ramo else. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU38}{TU38} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un ciclo for e il corpo del ciclo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU39}{TU39} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un blocco if e il corpo del blocco. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU40}{TU40} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente un'istruzione. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU41}{TU41} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un'interfaccia. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU42}{TU42} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un metodo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU43}{TU43} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la keyword ``return'' seguita dal valore da ritornare e da un punto e virgola. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU44}{TU44} & Un \texttt{JavaTemplate} è in grado di fornire un oggetto \texttt{ST} che generi una stringa Java contenente la dichiarazione di un ciclo while e il corpo del ciclo. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\hypertarget{TU45}{TU45} & Un \texttt{Compressor} è in grado di comprimere in formato ZIP una directory nel filesystem del server. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU46}{TU46} & \texttt{AppView.views} è un oggetto. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU47}{TU47} & \texttt{AppView.views.project} è una \texttt{backbone.View}. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU48}{TU48} & ProjectView.paper è un joint.dia.Paper & \textcolor{Green}{\textit{Superato}}\\ \hline
@@ -2055,8 +2090,9 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 \hypertarget{TU61}{TU61} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxVariable}. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU62}{TU62} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxReturn}. & \textcolor{Green}{\textit{Superato}}\\ \hline
 \hypertarget{TU63}{TU63} & \texttt{NewCellFactory} è in grado di fornire un \texttt{HxWhile}. & \textcolor{Green}{\textit{Superato}}\\ \hline
-\caption[Test di Unità]{Test di Unità}
-\label{tabella:test3}
+\hypertarget{TU64}{TU64} & Un \texttt{RequestHandlerController} è in grado di rispondere a una richiesta \texttt{handleGeneratorRequest} senza lanciare eccezioni. & \textcolor{Green}{\textit{Superato}}\\ \hline
+\caption[Test di unità]{Test di unità}
+\label{tab:unit}
 \end{longtable}
 \clearpage
 
@@ -2194,8 +2230,8 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 
 \hyperlink{TU63}{TU63} & \nogloxy{\texttt{swedesigner::client::model::NewCellFactory::-\linebreak getCell()}}\\ \hline
 
-\caption[Tracciamento Test di Unità-Metodi]{Tracciamento Test di Unità-Metodi}
-\label{tabella:tu-met}
+\caption[Tracciamento test di unità-metodi]{Tracciamento test di unità-metodi}
+\label{tab:tu-met}
 \end{longtable}
 
 
