--- a/Esterni/Piano_di_qualifica/diario.tex
+++ b/Esterni/Piano_di_qualifica/diario.tex
@@ -2,6 +2,7 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	3.0.1 & {\GG} (Verificatore) & 02/05/2017 & Aggiunta tabella \ref{tab:pkg-ti} \\ \hline
 	3.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
 	2.1.0 & {\PB} (Verificatore) & 30/03/2017 & Verifica del documento \\ \hline
 	2.0.3 & {\MM} (Verificatore) & 30/03/2017 & Importate sezioni \ref{sec:spec_tu} e \ref{sec:tracc_tu} da PragmaDB \\ \hline
